--- a/Prak 01/Prak 01.rmd
+++ b/Prak 01/Prak 01.rmd
@@ -42,7 +42,7 @@ install_load <- function (package1, ...)  {
    } 
 }
 
-install_load()
+install_load("esquisse")
 # webshot::install_phantomjs()
 
 path <- function() gsub  ( "\\\\",  "/",  readClipboard ()  )
@@ -52,4 +52,125 @@ path <- function() gsub  ( "\\\\",  "/",  readClipboard ()  )
 #Set Working Directory
 require("knitr")
 opts_knit$set(root.dir = "C:/Users/Fathan/Documents/Obsidian Vault/2. Kuliah/Smt 7 & 8/Visdat-25/Prak 01")
+```
+
+# Data mtcars
+
+```{r}
+# Launching the Addin and Calling the Data
+esquisser(data=mtcars, viewer = "browser")
+```
+
+## Jumlah Silinder vs Konsumsi Bahan Bakar
+
+```{r fig.height=5, fig.width=10, dpi=300}
+# Loading ggplot2 and the mtcars Dataset
+
+library(ggplot2)
+dat <- (mtcars)
+
+# Placing the Graph in an R Markdown Document
+
+ggplot(dat) +
+  aes(x = cyl, y = mpg, colour = hp, size = disp) +
+  geom_point(shape = "circle") +
+  geom_smooth(method = "lm", span = 0.75, linewidth = 1) +
+  scale_color_viridis_c(option = "plasma", direction = -1) +
+  labs(
+    x = "Cylinders (cyl)",
+    y = "Miles per Gallon (mpg)",
+    title = "Miles per Gallon by Number of Cylinders",
+    subtitle = "Accounting for Horsepower and Displacement",
+    caption = "Data From the mtcars Dataset",
+    color = "Horsepower (hp)",
+    size = "Displacement (cu. in.)"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(face = "italic", hjust = 0.5),
+    plot.caption = element_text(face = "italic", hjust = 0.5)
+  )
+```
+
+## Boxplot
+
+```{r fig.height=5, fig.width=10, dpi=300}
+ggplot(dat) +
+  aes(x = factor(cyl), y = mpg, fill = factor(cyl)) +
+  geom_boxplot() +
+  scale_fill_viridis_d(option = "plasma", direction = -1) +
+  labs(
+    x = "Cylinders (cyl)",
+    y = "Miles per Gallon (mpg)",
+    title = "Distribution of Miles per Gallon by Number of Cylinders",
+    subtitle = "Boxplot Showing Variability Across Cylinder Categories",
+    fill = "Cylinders"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(face = "italic", hjust = 0.5),
+    legend.position = "top"
+  )
+```
+
+## Violin Plot
+
+```{r fig.height=5, fig.width=10, dpi=300}
+ggplot(dat) +
+  aes(x = factor(cyl), y = mpg, fill = factor(cyl)) +
+  geom_violin(trim = FALSE, alpha = 0.7, color = "black") +  # Violin plot
+  geom_boxplot(width = 0.1, fill="white") +  # Boxplot di dalamnya
+  scale_fill_viridis_d(option = "plasma", direction = -1) +  # Warna
+  labs(
+    x = "Cylinders (cyl)",
+    y = "Miles per Gallon (mpg)",
+    title = "Violin Plot of Miles per Gallon by Cylinder Count",
+    subtitle = "With Embedded Boxplot Showing Key Statistics",
+    fill = "Cylinders"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(face = "italic", hjust = 0.5),
+    legend.position = "top"
+  )
+```
+
+# Data Iris
+
+```{r}
+esquisser(data=iris, viewer = "browser")
+```
+
+```{r fig.height=5, fig.width=10, dpi=300}
+ggplot(iris) +
+  aes(
+    x = Sepal.Length,
+    y = Petal.Length,
+    colour = Species,
+    size = Sepal.Length
+  ) +
+  geom_point(shape = "circle") +
+  scale_color_brewer(palette = "Purples", direction = 1) +
+  labs(
+    x = "Sepal Length",
+    y = "Sepak Width",
+    title = "Sepal Length vs. Sepal Width",
+    subtitle = "A comparison through flower species",
+    caption = "Iris Dataset",
+    color = "Flower class",
+    size = "Sepal Length"
+  ) +
+  theme_classic() +
+  theme(
+    legend.position = "top",
+    plot.title = element_text(
+      size = 17L,
+      face = "bold"
+    ),
+    plot.subtitle = element_text(face = "bold"),
+    plot.caption = element_text(face = "italic")
+  )
 ```
